# Aerial-YOLO-SAM

./: .gitignore  README.md  convert.py  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
aerialimagesdetection/: detection.py  footprint.py  preprocess.py
aerialimagesdetection/inference/: data_preprocessing.py  detection.py  footprint.py  super_resolution.py
aerialimagesdetection/training/: data_preparation.py  detection.py  tiling.py
data/: .gitignore  xView.dvc  xView.yaml
data/xView/: images.dvc  xView.yaml  xView_train.geojson.dvc
